tests/macros/select/plugin.stderr
error: option `plugin` does not exist for kind `select`
 --> $DIR/plugin.rs:2:44
  |
2 |     let q = requestty::questions![Select { plugin: todo!() }];
  |                                            ^^^^^^
