tests/macros/select/plugin.rs
fn main() {
    let q = requestty::questions![Select { plugin: todo!() }];
}
